--- a/templates/view.html
+++ b/templates/view.html
@@ -243,7 +243,7 @@ Project $master.fontname
         }, function(data) {
           var json = jQuery.parseJSON(data).A;
           for (var k = 0; k < glyphpaths.length; k++) {
-            glyphpaths[k].fillColor = {alpha: 1};
+            glyphpaths[k].removeSegments();
           }
           glyphpaths = filledges(json.edges);
         });
@@ -379,7 +379,7 @@ Project $master.fontname
         }, function(data) {
           var json = jQuery.parseJSON(data).B;
           for (var k = 0; k < glyphpaths.length; k++) {
-            glyphpaths[k].fillColor = {alpha: 1};
+            glyphpaths[k].removeSegments();
           }
           glyphpaths = filledges(json.edges);
         });
