select point render new form

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,9 @@ $def with (page)
 <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
 <META HTTP-EQUIV="Expires" CONTENT="-1">
 <link rel="icon" href="/static/favicon.ico" type="image/x-icon"/>
-<script type="text/javascript" src="/static/jquery-1.6.4.min.js"></script>
-<script type="text/javascript" src="/static/jquery-ui.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 <style>
 @font-face {
