--- a/templates/view.html
+++ b/templates/view.html
@@ -158,6 +158,7 @@ Canvas.prototype.renderGlyph = function(edges) {
 }
 
 Canvas.prototype.onMouseDown = function(event) {
+  jQuery('#test').hide();
   for (var k = 0; k < this.paths.length; k++) {
     var point = this.paths[k].getNearestPoint(event.point);
     if (point.getDistance(event.point) < 5) {
@@ -165,10 +166,6 @@ Canvas.prototype.onMouseDown = function(event) {
       this.currentpointnr = k + 1;
       this.box.position = point;
       this.isdragged = false;
-
-      var e = event.event;
-      jQuery('#test').css({left: parseInt(e.clientX) + 'px', top: parseInt(e.clientY) + 'px'});
-      jQuery('#test').show();
       return;
     };
   }
@@ -208,7 +205,10 @@ Canvas.prototype.onMouseUp = function(event) {
         }
       }.bind(this)
     );
-    this.isdragged = false;
+  } else {
+    var e = event.event;
+    jQuery('#test').css({left: parseInt(e.clientX) + 'px', top: parseInt(e.clientY) + 'px'});
+    jQuery('#test').show();
   }
   this.currentsegment = this.currentpointnr = null;
 };
