--- a/templates/view.html
+++ b/templates/view.html
@@ -159,6 +159,7 @@ Canvas.prototype.renderGlyph = function(edges) {
 
 Canvas.prototype.onMouseDown = function(event) {
   this.currentsegment = this.currentpointnr = null;
+  jQuery('#test form').val("");
   jQuery('#test').hide();
   for (var k = 0; k < this.paths.length; k++) {
     var point = this.paths[k].getNearestPoint(event.point);
@@ -211,9 +212,21 @@ Canvas.prototype.onMouseUp = function(event) {
       var e = event.event;
       jQuery('#test').css({left: parseInt(e.clientX) + 'px', top: parseInt(e.clientY) + 'px'});
       jQuery('#test').show();
-      jQuery('#test select').change(function(event){
+      jQuery('#test select').off('change').on('change', function(event){
         var val = jQuery(event.target).val();
         alert('you are selected __' + val + '__:' + this.currentsegment.data[val]);
+      }.bind(this));
+
+      jQuery('#test form button').off('click').on('click', function(e){
+        e.preventDefault();
+        var val = jQuery(e.target).parents('form').find('input[type=text]').val();
+        jQuery.post('/save-point-parameter/',
+                    {name: jQuery(e.target).parents('form').find('select').val(),
+                     value: val})
+          .fail(function(){
+            var val = jQuery(e.target).parents('form').find('input[type=text]').val();
+            alert("{name:" + jQuery(e.target).parents('form').find('select').val() + ", value:" + val + "}");
+          });
       }.bind(this));
     };
   };
@@ -288,7 +301,7 @@ jQuery(
 </script>
 
 <div id="test" style="display: none; background-color: white; position: absolute; padding: 8px; border: solid 1px black">
-  <form action="" class="form-horizontal" role="form">
+  <form action="" class="form-horizontal" role="form" method="post">
     <div class="form-group">
       <label for="$:pointform.select.name" class="col-sm-2 control-label">$:pointform.select.description</label>
       <div class="col-sm-10">
