hide dialog after changed glyph

--- a/templates/view.html
+++ b/templates/view.html
@@ -236,8 +236,10 @@ Canvas.prototype.onMouseUp = function(event) {
             }
             this.renderGlyph(json.edges);
             this.draw();
-            
+
             this.onGlyphLoaded(data);
+
+            jQuery('#test').hide();
           }.bind(this));
       }.bind(this));
     };
